kubernetes-books/k8s-book/04-istio/03-traffic-management/mainfest/bookinfo/bookinfo-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: bookinfo-ratings
spec:
  host: ratings.prod.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      # 最少连接数策略
      simple: LEAST_CONN
