kubernetes-books/k8s-book/04-istio/03-traffic-management/mainfest/bookinfo/bookinfo-se.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: extern-svc-https
spec:
  hosts:
    - api.dropboxapi.com
  location: MESH_INTERNAL
  ports:
    - number: 443
      name: https
      protocol: TLS
  resolutions: DNS
